Compilation_Racket_Mips/piton/tests/errors/duplicate_decls.py
a: int = 1
a: int = 2